<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
<com.zhy.autolayout.AutoLinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_height="match_parent">
  <include layout="@layout/act_mine_toolbar"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20.0px"
        android:background="#f7f7f7"
        />
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="261.0px">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/tv_info_header"
           android:textSize="26.0px"
           android:textColor="#2a2a2a"
           android:layout_marginTop="123.0px"
           android:layout_marginLeft="20.0px"
           />
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26.0px"
            android:textColor="#2a2a2a"
            android:layout_marginLeft="20.0px"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="35.0px"
            android:text="@string/nickname"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@id/iv_avatar"
            android:layout_marginTop="38.0px"
            android:layout_marginRight="20.0px"
            android:layout_alignParentRight="true"
            app:civ_border_color="@android:color/white"
            android:layout_width="@dimen/avatar_info_width"
            android:layout_height="@dimen/avatar_info_width"
            android:background="@drawable/avator_monkey" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <View
     style="@style/personal_info_divider"
        />
<com.zhy.autolayout.AutoRelativeLayout
   style="@style/personal_info_item">
    <TextView
        android:id="@+id/tv_gender"
       style="@style/personal_item_text"
        android:text="@string/gender"
        />
    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tv_gender"
        android:layout_marginLeft="14.0px"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rb_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:textColor="#2a2a2a"
            android:drawablePadding="12.0px"
            android:text="@string/woman"
            />
        <RadioButton
            android:id="@+id/rb_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:textColor="#2a2a2a"
            android:drawablePadding="12.0px"
            android:text="@string/man"
            />
    </RadioGroup>
</com.zhy.autolayout.AutoRelativeLayout>
    <View
        style="@style/personal_info_divider"
        />
    <com.zhy.autolayout.AutoRelativeLayout
        style="@style/personal_info_item">
        <TextView
            android:id="@+id/tv_info_email"
            style="@style/personal_item_text"
            android:text="@string/tv_email"
            />
    </com.zhy.autolayout.AutoRelativeLayout>
    <View
        style="@style/personal_info_divider"
        />
    <com.zhy.autolayout.AutoRelativeLayout
        style="@style/personal_info_item">
        <TextView
            android:id="@+id/tv_birth"
            style="@style/personal_item_text"
            android:text="@string/birthday"
            />
        <TextView
            android:id="@+id/tv_birth_year"
            style="@style/tv_birth"
            android:layout_toRightOf="@+id/tv_birth"
            android:text="2017"
            />
        <TextView
            android:id="@+id/tv_birth_month"
            style="@style/tv_birth"
            android:layout_toRightOf="@+id/tv_birth_year"
            android:text="12"
            />
        <TextView
            android:id="@+id/tv_birth_day"
            style="@style/tv_birth"
            android:layout_toRightOf="@+id/tv_birth_month"
            android:text="02"
            />
        <ImageView
            android:id="@+id/img_choose_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20.0px"
            android:src="@drawable/more"
            />

    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>
</ScrollView>