<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <include
            layout="@layout/act_mine_fragment_header"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/header_fragment_height" />

        <include
            layout="@layout/act_mine_fragment_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-50.0px" />

        <RelativeLayout
            android:id="@+id/rl_mine_favor"
            android:layout_marginTop="10.0px"
            style="@style/mine_item">
            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/shoucang"
                />
            <TextView
                android:id="@+id/tv_mine_favor"
                style="@style/mine_item_text"
                android:text="@string/tv_my_favor" />
            <ImageView
                android:id="@+id/iv_mine_favor"
                style="@style/mine_arrow" />
        </RelativeLayout>
        <View
           style="@style/mine_item_divider"/>
        <RelativeLayout
            android:id="@+id/rl_receive_address"
            style="@style/mine_item">
            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/dizhi"
                />
            <TextView
                android:id="@+id/tv_receive_address"
                style="@style/mine_item_text"
                android:text="@string/tv_receive_address" />
            <ImageView
                android:id="@+id/iv_receive_address"
                style="@style/mine_arrow" />
        </RelativeLayout>
        <View
            style="@style/mine_item_divider"/>
        <RelativeLayout
            android:id="@+id/rl_mine_setting"
            style="@style/mine_item">
            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/mine_set"
                />
            <TextView
                android:id="@+id/tv_mine_setting"
                style="@style/mine_item_text"
                android:text="@string/tv_mine_setting" />
            <ImageView
                android:id="@+id/iv_mine_setting"
                style="@style/mine_arrow" />
        </RelativeLayout>
        <View
            style="@style/mine_item_divider"/>
        <RelativeLayout
            android:id="@+id/rl_about_us"
            style="@style/mine_item">
            <ImageView
              style="@style/mine_item_img"
                android:src="@drawable/we"
                />
            <TextView
                android:id="@+id/tv_about_us"
                style="@style/mine_item_text"
                android:text="@string/tv_about_us" />
            <ImageView
                android:id="@+id/iv_about_us"
                style="@style/mine_arrow" />
        </RelativeLayout>
        <View
            style="@style/mine_item_divider2"/>
        <RelativeLayout
            android:id="@+id/rl_mine_share"
            style="@style/mine_item">
            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/share"
                />
            <TextView
                android:id="@+id/tv_mine_share"
                style="@style/mine_item_text"
                android:text="@string/tv_mine_share" />
            <ImageView
                android:id="@+id/iv_mine_share"
                style="@style/mine_arrow" />
        </RelativeLayout>
        <View
            style="@style/mine_item_divider"/>
        <RelativeLayout
            android:id="@+id/rl_mine_evaluate"
            style="@style/mine_item">
            <ImageView
                style="@style/mine_item_img"
                android:src="@drawable/dafen"
                />
            <TextView
                android:id="@+id/tv_mine_evaluate"
                style="@style/mine_item_text"
                android:text="@string/tv_mine_evaluate" />
            <ImageView
                android:id="@+id/iv_mine_evaluate"
                style="@style/mine_arrow" />
        </RelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>

</ScrollView>