<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="680.0px"
        android:layout_height="100.0px"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_all_msg"
            android:layout_width="40.0px"
            android:layout_marginLeft="34.0px"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_icon_act_mine_all"
                    android:layout_width="40.0px"
                    android:layout_height="32.0px"
                    android:layout_marginTop="16.0px"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16.0px"
                    android:text="@string/mine_all"
                    android:textColor="@color/center_tv"
                    android:textSize="20.0px" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_waitfor_send"
            android:layout_width="60.0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="166.0px"
            >

            <ImageView
                android:id="@+id/img_icon_act_mine_send"
                android:layout_width="40.0px"
                android:layout_height="32.0px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16.0px"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64.0px"
                android:text="@string/tv_waitfor_send"
                android:textColor="@color/center_tv"
                android:textSize="20.0px" />

            <TextView
                android:id="@+id/tv_orders_waitforsend_num"
                android:layout_width="25.0px"
                android:layout_height="25.0px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30.0px"
                android:background="@drawable/myebuy_orders_center_num_bg"
                android:gravity="center"

                android:text="1"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_order_num"
                android:textStyle="bold"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_waitfor_accept"
            android:layout_width="60.0px"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:id="@+id/img_icon_act_mine_accept"
                android:layout_width="40.0px"
                android:layout_height="32.0px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16.0px"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64.0px"
                android:text="@string/tv_wait_accept"
                android:textColor="@color/center_tv"
                android:textSize="20.0px" />

            <TextView
                android:id="@+id/tv_orders_waitforaccept_num"
                android:layout_width="25.0px"
                android:layout_height="25.0px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30.0px"
                android:background="@drawable/myebuy_orders_center_num_bg"
                android:gravity="center"

                android:text="1"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_order_num"
                android:textStyle="bold"
                android:visibility="visible" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_waitfor_evaluate"
            android:layout_width="60.0px"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="166.0px"
            >

            <ImageView
                android:id="@+id/img_icon_act_mine_evaluate"
                android:layout_width="40.0px"
                android:layout_height="32.0px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16.0px"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64.0px"
                android:text="@string/tv_wait_evaluate"
                android:textColor="@color/center_tv"
                android:textSize="20.0px" />

            <TextView
                android:id="@+id/tv_orders_waitforevaluate_num"
                android:layout_width="25.0px"
                android:layout_height="25.0px"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30.0px"
                android:background="@drawable/myebuy_orders_center_num_bg"
                android:gravity="center"

                android:text="1"
                android:textColor="@color/white"
                android:textSize="@dimen/tv_order_num"
                android:textStyle="bold"
                android:visibility="visible" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_customer_service"
            android:layout_width="40.0px"
            android:layout_alignParentRight="true"
            android:layout_marginRight="34.0px"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_icon_act_mine_service"
                    android:layout_width="40.0px"
                    android:layout_height="32.0px"
                    android:layout_marginTop="16.0px"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16.0px"
                    android:text="@string/tv_customer_service"

                    android:textColor="@color/center_tv"
                    android:textSize="20.0px" />
            </LinearLayout>

        </RelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>
</android.support.v7.widget.CardView>